--- a/src/components/newsletter/NewsLetter.module.css
+++ b/src/components/newsletter/NewsLetter.module.css
@@ -2,6 +2,7 @@
     padding-top: 80px;
     background-color: white;
     height: 100vh;
+    width: 100vw;
 }
 .list{
     padding-left: 64px;
@@ -66,4 +67,22 @@ font-family: 'Nunito Sans', sans-serif; */
     font-size: 10px;
     font-weight: 400;
     line-height: 12px;
+}
+
+/* responsive */
+@media only screen and (max-width: 450px) {
+    .main {
+        width: 100%;
+    }
+
+    .person{
+        width: 95%;
+    }
+
+    .list{
+        padding-left: 20px;
+    }
+    .main__btn{
+        margin-left: 20px;
+    }
 }
