--- a/src/components/register/register.module.css
+++ b/src/components/register/register.module.css
@@ -72,5 +72,22 @@ input{
     border: none;
     background: white;
     border-left: solid 2px black;
+    cursor: pointer;
 
 }
+
+/* responsiveness */
+@media only screen and (max-width: 600px) {
+    .register__card{
+        background-color: var(--primaryOrange);
+        width: 100%;
+        height: 100%;
+        border-radius: 24px;
+        margin: 0 auto;
+        padding: 28px 31px 31px 31px;
+        font-family: 'Montserrat', sans-serif;
+    }
+
+
+}
+
