--- a/src/components/register/Modal.module.css
+++ b/src/components/register/Modal.module.css
@@ -41,3 +41,15 @@ body.active-modal {
     right: 10px;
     padding: 5px 7px;
 }
+
+/* responsiveness */
+@media only screen and (max-width: 600px) {
+    .modal__content {
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        border-radius: 0;
+    }
+
+
+}
